# vault-of-cardboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.deps  Dockerfile.rescry  Dockerfile.ux  Makefile  README.md  changelog.yml  dev-env.yml  docker-compose.yml  hack  ingest  mir.json
bench/parse/: gen-input  mark  report
bench/scryfall/: mark  report
deploy/: docker-compose.yml
deploy/k8s/: api.yml  ingest.yml  rescry.yml
dev/: data-flow.dot  example.cdif  parser-fsm.dot
docker/: README.md
docker/ingester/: Dockerfile  ingest
docker/perimeter/: Dockerfile  nginx.conf
docker/proxycache/: Dockerfile  entrypoint.sh  squid.conf
htdocs/: docs.html  index.html
htdocs/css/: vcb.css
htdocs/js/: clarify.js  diff.js  draft.js  lang.js  play.js  util.js
js/: .gitignore  LICENSE  Makefile  api.js  cdif.js  draft.js  helpers.js  index.js  package-lock.json  package.json  query.js  this  vault.js  when.js
js/test/: cdif.js  draft.js  helpers.js  query.js  vault.js  when.js
js/ui/: docs.js  login.js  set-list.js
migrations/2020-02-17-132046_v1/: down.sql  up.sql
migrations/2020-07-19-171923_track_payment_in_buy_transations/: down.sql  up.sql
migrations/2020-07-19-182035_add_goals/: down.sql  up.sql
oci/: README.md
oci/api/: Dockerfile  Dockerfile.dockerignore
oci/proxy/: Dockerfile  Dockerfile.dockerignore
oci/ux/: Dockerfile  Dockerfile.dockerignore  nginx.conf
sass/: .gitignore  Makefile  card.scss  clarify.scss  decks.scss  forms.scss  landing.scss  layout.scss  legacy.scss  loading.scss  main.scss  play.scss  timeline.scss  ui.scss  vcb.scss
src/: api.rs  card.rs  cdif.rs  data.rs  db.rs  lib.rs  main.rs  parser.rs  prelude.rs  schema.rs  scryfall.rs
src/cli/: api.rs  migrate.rs  mod.rs  passwd.rs  reconciler.rs  rescry.rs
src/data/: cdif.rs  collection.rs  fs.rs  map.rs  mod.rs  pile.rs  pool.rs  raw.rs
src/scryfall/: data.rs  mod.rs
test/: cards.json  lookup.json  nginx  prices.json
test/cdif/: mirage-wurm.cdif
test/integration/: 01-ingestion.t  envrc  setup
test/unit/: envrc  setup
util/: schema
ux/: README.md  nginx.conf.template  package.json  vue.config.js
ux/public/: changelog.json  index.html  prices.json
(+74 files in other folders)
