[package]
name = "vault-of-cardboard"
version = "0.1.0"
authors = ["James Hunt <james@niftylogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "uuidv07", "chrono"] }
diesel_migrations = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
