[package]
name = "vault-of-cardboard"
version = "0.1.0"
authors = ["James Hunt <james@niftylogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempdir = "0.3"

[dependencies]
error-chain = "0.12"
clap = "2.33"

uuid = { version = "0.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "uuidv07", "chrono"] }
diesel_migrations = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.13"
bcrypt = "0.6"

hyper = "0.10"
iron = "0.6"
router = "0.6"
